feat: enhance storage overlay with improved rendering, input handling, and layout adjustments